--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="Home">Home</string>
     <string name="Favorites">Favorites</string>
     <string name="Search">Search</string>
+
+    <string name="select_date_error">Please select date</string>
+    <string name="select_hour_error">Please select hour</string>
+    <string name="successfully_bought">Successfully bought ticket!</string>
 </resources>
